Working on the project, adding models, view models, views, controllers, etc.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "OnlineShopBagsDBConnectionString": "Server=localhost;Database=OnlineShopBagsDB;Trusted_Connection=True;TrustServerCertificate=Yes"
+    },
+    "Cloudinary": {
+        "CloudName": "dil8dgz6m",
+        "ApiKey": "323239194153646",
+        "ApiSecret": "-w5BNsx-acRxHLNnS7GHyPcLPKM"
     }
 }
